# MeiYanDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/yuong/meiyandemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FaceTrack.cpp  FaceTrack.h  native-lib.cpp
app/src/main/cpp/FaceAlignment/: CMakeLists.txt
app/src/main/java/com/yuong/meiyandemo/: MainActivity.java  MyApplication.java  OpenCVJni.java
app/src/main/java/com/yuong/meiyandemo/face/: Face.java
app/src/main/java/com/yuong/meiyandemo/filter/: AbstractFilter.java  AbstractFrameFilter.java  BeautyFilter.java  BigEyesFilter.java  CameraFilter.java  ScreenFilter.java  StickFilter.java
app/src/main/java/com/yuong/meiyandemo/util/: CameraHelper.java  CameraHelper2.java  OpenGLUtil.java  Utils.java
app/src/main/java/com/yuong/meiyandemo/view/: GLRender.java  OpenGLView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: base_frag.frag  base_vertex.vert  beauty.glsl  beauty_frag.frag  big_eyes_frag.frag  camera_frag.frag  camera_vertex.vert
app/src/main/res/values/: strings.xml
app/src/test/java/com/yuong/meiyandemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
